Bepro 1558 my network page registry tab new design (#1)
* page redesign

* design adjusts

* design done

* using profile variant

* fix

* adding disabled prop

* must show errorMessage

* tracking active tab to hide if is registry tab

* fix

* adding disabled

* test

* transactions done

* fix

* adding missing translation and remove console.log

* fix translation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -78,7 +78,7 @@
       "bounties": "Bounties",
       "pull-requests": "Pull Requests",
       "proposals": "Proposals",
-      "my-network": "My Network",
+      "my-network": "Custom Network",
       "support-center": "Support Center",
       "guides": "Guides",
       "join-discord": "Join the Discord",
@@ -195,7 +195,9 @@
     "latest": "Latest",
     "network": "Network",
     "unsupported": "Unsupported",
-    "votes": "Votes"
+    "votes": "Votes",
+    "changing": "Changing",
+    "save-changes": "Save Changes"
   },
   "modals": {
     "help-modal": {
