Bepro 1637 new bounty header desktop (#35)
* adjusting price-conversor component

* creating bounty-settings component

* adjusting BountyHero component to new design

* adding handleEditIssue to BountyHero

* adding owner-cancel translation

* adding break-title and bounty-settings styles

* removing hardCancel and ownerCancel page-actions

* removing pullRequest and githubLink page-actions

* removing unused functions

* removing forks in page-actions

* removing unused imports

* adjusting bounty-hero to new components

* adjusting bounty-hero to bountyItemLabel

* adding translations

* removing count-info component

* adding bounty-outline-button class

* adding className option in GithubLink

* Update common.json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -199,6 +199,10 @@
     "votes": "Votes",
     "changing": "Changing",
     "save-changes": "Save Changes",
+    "repository": "Repository",
+    "branch": "Branch",
+    "opened-on": "Opened on",
+    "owner": "Owner",
     "apply": "apply"
   },
   "modals": {
