Bepro 1627 navbar mobile (#30)
* adding icon column to chain table

* saving chain icon from chainid

* updating icon

* removing unused import

* introducing get chain icon

* introducing chain icon to chain dropdown

* introducing responsive wrapper component

* updating styles

* renaming explore page

* introducing new components

* adding breakpoints

* introducing multi action btn

* test

* test

* navbar done, missing multi action select ui

* display chain dropdown only inside a network and fix style

* using react select for desktop and fix styles

* only use react-select when is not mobile

* executing actions

* removing unused interface

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -63,8 +63,9 @@
     "council": "Curators",
     "leaderboard": "Leaderboard",
     "Oracle": "bv{{token}}",
-    "new-bounty": "New bounty",
+    "new-bounty": "Create bounty",
     "explore": "Explore",
+    "bounty-hall": "Bounty Hall",
     "get-started": "Get Started",
     "connect": "Connect Wallet",
     "new-network": "New Network",
@@ -203,7 +204,8 @@
     "branch": "Branch",
     "opened-on": "Opened on",
     "owner": "Owner",
-    "apply": "apply"
+    "apply": "apply",
+    "create": "Create"
   },
   "modals": {
     "help-modal": {
