Bepro 1636 mobile curators page inside a network (#68)
* refactoring search curators endpoint

* refactoring curators page

* refactoring leaderboard list component

* refactoring components

* using custom dropdown

* getting list data from server side

* more refactoring

* introducing overview endpoint

* getting curator data on server side

* organizing hooks

* refactoring curators layout component

* refactoring page hero component

* refactoring become a curator card

* refactoring curators list component

* fixes

* no need of using template string

* fix conditions

* handling query params

* adding custom container

* removing justify prop

* removing custom container and sort label

* refactoring curators list

* change bg color

* refactoring

* update translations

* split by ? to remove query params

* refactoring horizontal list

* more refactoring

* removing padding and margin

* can't show filters on curators page

* handling connect button label when mobile

* refactoring navigation links

* fix build and type erros

* fix active link check

* fix reading of undefined

* refactoring scroll to button

* extracting action type

* introducing generic list component

* refactoring leaderboard list to use new list component

* refactoring curators list to use new list component

* using new go top button component and adjust spacing

* fix type error

* hiding list sort on mobile because we gonna have it in the modal

* adding missing translations

* adding sort by to filters modal

* show selected option on native select

* fix spacing

* hadling initial arrow

* increase scroll limits

* increase right limit

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -60,17 +60,19 @@
     "wallet": {}
   },
   "main-nav": {
-    "council": "Curators",
+    "curators": "Curators",
     "leaderboard": "Leaderboard",
     "Oracle": "bv{{token}}",
     "new-bounty": "Create bounty",
     "explore": "Explore",
     "bounty-hall": "Bounty Hall",
     "get-started": "Get Started",
-    "connect": "Connect Wallet",
+    "connect": "Connect",
+    "connect-wallet": "Connect Wallet",
     "new-network": "New Network",
     "my-network": "My Network",
     "networks": "Networks",
+    "bounties": "Bounties",
     "nav-avatar": {
       "my-profile": "My profile",
       "profile": "Profile",
@@ -150,7 +152,8 @@
     "hide": "Hide",
     "remove": "Remove",
     "register": "Register",
-    "clear-all": "Clear All"
+    "clear-all": "Clear All",
+    "apply": "Apply"
   },
   "misc": {
     "by": "by",
@@ -209,7 +212,9 @@
     "bounty": "Bounty",
     "choose-one": "Choose one",
     "networks": "Networks",
-    "copied": "Copied"
+    "copied": "Copied",
+    "address-copied": "Address Copied",
+    "empty-list": "Empty List"
   },
   "modals": {
     "help-modal": {
