Bepro 1647 mobile payments page (#107)
* design adjusts

* mobile design

* handle go to network button

* design adjusts

* more design adjusts

* adding translations

* refactoring payments endpoint

* fix property name

* using server side data

* hide github warning and button if bounty is closed

* more adjusts

* removing console.log

* hide github warning and button if bounty is in draft

* adding new hook and using it for filter

* introducing new component chain filter based on useQueryFilter hook

* refactor new component

* using new filters components

* remove console.log

* use object instead of array, to make easier handle multi params

* fix

* using network primary color

* fix design details

* fix responsive behavior

* use native select wrapper

* refactor payments list component

* introducing mobile payments filters modal

* add missing key

* change key

* finish filters modal

* fix selected index

* handle empty value

* fix condition

* fix bounties listing on management tab

* fix visible parameter

* fix spacing

* adjust spacing

* fix warnings

* fix warnings

* remove unnecessary useEffect

* introducing helper to convert token

* increase ttl

* fetch payments only when all parameters are present

* combine current query with new params

* remove useEffects

* use onChange method

* rename to a more descritive name and add append param

* refactor to a new component

* refactor redirect methods and add translations

* add condition to avoid unnecessary updates

* refactor payments page to new structure

* fix build errors

* fix alignment

* fix after rebase

* fix icon

* more fixes

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,7 +10,7 @@
   "close": "Close",
   "currencies": {
     "euro": "EURO",
-    "error-convert-all-to-euro": "could not convert all tokens to Euro"
+    "error-convert-all-to-fiat": "Could not convert all tokens to {{fiat}}"
   },
   "filters": {
     "filters": "Filter",
@@ -153,7 +153,8 @@
     "remove": "Remove",
     "register": "Register",
     "clear-all": "Clear All",
-    "apply": "Apply"
+    "apply": "Apply",
+    "clear": "Clear"
   },
   "misc": {
     "by": "by",
@@ -214,7 +215,8 @@
     "networks": "Networks",
     "copied": "Copied",
     "address-copied": "Address Copied",
-    "empty-list": "Empty List"
+    "empty-list": "Empty List",
+    "chain": "Chain"
   },
   "modals": {
     "help-modal": {
@@ -450,21 +452,35 @@
   },
   "info-data": {
     "minutes_other": "minutes",
-    "minutes": "minute",
+    "minutes_one": "minute",
+    "minutesWithCount_other": "{{count}} minutes",
+    "minutesWithCount_one": "{{count}} minute",
     "hours_other": "hours",
-    "hours": "hour",
-    "months": "month",
+    "hours_one": "hour",
+    "hoursWithCount_other": "{{count}} hours",
+    "hoursWithCount_one": "{{count}} hour",
+    "months_one": "month",
     "months_other": "months",
-    "years": "year",
+    "monthsWithCount_other": "{{count}} months",
+    "monthsWithCount_one": "{{count}} month",
+    "years_one": "year",
     "years_other": "years",
-    "days": "day",
+    "yearsWithCount_other": "{{count}} years",
+    "yearsWithCount_one": "{{count}} year",
+    "days_one": "day",
     "days_other": "days",
-    "seconds": "second",
+    "daysWithCount_other": "{{count}} days",
+    "daysWithCount_one": "{{count}} day",
+    "seconds_one": "second",
     "seconds_other": "seconds",
     "text-data": "Opened {{value}} Ago"
   },
   "cookie-consent": {
     "message": "This website uses cookies to enhance the user experience.",
     "button-label": "Accept"
+  },
+  "placeholders": {
+    "select-chain": "Select Chain",
+    "select-latest": "Select Latest"
   }
 }
