Bepro 1644 mobile wallet page (#95)
* adding logic recivedTotal to tablet and mobile

* separating components created on the same page

* adjusting imports

* refactoring Wallet-balance component

* refactoring WalletPage

* adding search and select network to WalletBalance

* adding new translations

* adding logic to update networkName inside network

* adjusting mobile-filters to hideSort & chainSelect

* adding filters to wallet-balance-view

* adding translations

* adding isFilter logic to mobile-filters-modal

* adjusting margin-top received in total

* adding new useEffect to divide loadBalance

* introducing helper to convert token

* fix spaces

* fix imports merge

* adding maxWidth mobile network name

* adjusting maxWidth style

* adding filterByConnectedChain

* adding container filter view

* adding filter component logic

* adding translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,12 +15,12 @@
   "filters": {
     "filters": "Filter",
     "search-repositories": "Search repositories",
-    "repository": "repository",
+    "repository": "Repository",
     "all": "All",
     "no-records-found": "No records found",
     "clear-filter": "Clear filter",
     "bounties": {
-      "title": "bounty state",
+      "title": "Bounty state",
       "all": "All bounties",
       "open": "Open bounties",
       "draft": "Draft bounties",
@@ -31,7 +31,7 @@
       "closed-not-found": "Closed bounties not found"
     },
     "timeframe": {
-      "title": "timeframe",
+      "title": "Timeframe",
       "week": "Past week",
       "month": "Past month",
       "year": "Past year"
@@ -169,6 +169,7 @@
     "details": "Details",
     "forks": "Forks",
     "title": "Title",
+    "chain": "Chain",
     "github": "Github",
     "metamask": "Metamask",
     "by-connecting": "By connecting, you accept",
