--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -367,7 +367,7 @@
     "failed-update-bounty": "Failed to update bounty!",
     "read-only-network": "This network is closed. It is set to read-only mode.",
     "results-truncated": "Results Truncated",
-    "not-available-chain": "Not available on this chain",
+    "not-available-chain": "Network not present on this chain",
     "something-went-wrong": "Something went wrong"
   },
   "404": {
