adding options translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -172,6 +172,7 @@
     "chain": "Network",
     "github": "Github",
     "metamask": "Metamask",
+    "options": "Options",
     "by-connecting": "By connecting, you accept",
     "terms-and-conditions": "Terms & Conditions",
     "privacy-policy": "Privacy Policy",
