--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -72,7 +72,9 @@
     "new-network": "New Marketplace",
     "my-network": "My Marketplace",
     "networks": "Marketplaces",
+    "marketplaces": "Marketplaces",
     "bounties": "Tasks",
+    "tasks": "Tasks",
     "nav-avatar": {
       "my-profile": "My profile",
       "profile": "Profile",
