--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -157,7 +157,8 @@
     "clear-all": "Clear All",
     "apply": "Apply",
     "clear": "Clear",
-    "save": "Save"
+    "save": "Save",
+    "accept": "Accept"
   },
   "misc": {
     "by": "by",
