using translations and format value

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -242,5 +242,15 @@
   },
   "allow-list": {
     "not-allowed": "Task creation is not allowed with this address"
+  },
+  "review-section": {
+    "marketplace": "Marketplace",
+    "title": "Title",
+    "description": "Description",
+    "tags": "Tags",
+    "originLink": "Origin Link",
+    "deliverableType": "Deliverable Type",
+    "totalAmount": "Total Amount",
+    "fundersReward": "Funders Reward"
   }
 }
