--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -252,5 +252,6 @@
     "deliverableType": "Deliverable Type",
     "totalAmount": "Total Amount",
     "fundersReward": "Funders Reward"
-  }
+  },
+  "approximated-values-warning": "Defining the Reward amount will result in approximate values in the contract. If you want exact values, set the Total Amount first."
 }
