--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -14,6 +14,7 @@
     "funded": "Funded",
     "working": "Users working",
     "deliverable": "Deliverable",
+    "deliverables_one": "Deliverable",
     "deliverables_other": "Deliverables",
     "proposals_one": "proposal",
     "proposals_other": "proposals",
