removing "MVP" to sub-title-bounties

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -175,7 +175,7 @@
   "in-bounties": "in Tasks",
   "distributed": "distributed",
   "title-bounties": "Task Hall",
-  "sub-title-bounties": "A collection of the most recent tasks and MVP Marketplaces on our ecosystem",
+  "sub-title-bounties": "A collection of the most recent tasks and Marketplaces on our ecosystem",
   "most-active-networks": "Most Active Marketplaces",
   "recent-bounties": "Recent Tasks",
   "recent-funding": "Recent Funding requests",
