--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -66,7 +66,7 @@
     "redeem": "Redeem",
     "update-amount": "Update Amount",
     "edit-bounty": "Edit task",
-    "owner-cancel": "Owner cancel",
+    "owner-cancel": "Cancel task",
     "update-bounty": "Task updated successfully",
     "canceled-bounty": "Task canceled successfully",
     "recognize-finished": {
